# byankushai

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/routers/: gemini_router.py  image_router.py  tts_router.py
app/schemas/: GenerateRequest.py  GenerateResponse.py  PromptRequest.py  PromptResponse.py  TtsRequest.py  VoiceVariant.py  __init__.py
app/services/: image_generation.py
app/services/genai/: generate_response.py
app/services/text_to_image/: image_generation_service.py  model_downloader.py
app/services/tts/: kokoro_service.py  model_downloader.py
