[project]
name = "byankushai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.39.0",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "huggingface-hub>=1.22.0",
    "kokoro>=0.9.4",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.13.0",
    "uvicorn>=0.51.0",
    "watchfiles>=1.2.0",
]
